# dtc-engineering

./: .gitignore  .pre-commit-config.yaml  README.md
.github/: copilot-instructions.md
dbt/: local_setup.md  pyproject.toml
dbt/taxi_rides_ny/: ingest_data.py  profiles.yml.example
dbt/taxi_rides_ny/models/staging/: sources.yml  stg_fhv_tripdata.sql
homework/module02/: docker-compose.yaml
homework/module_01/: docker-compose.yml  homework.md  load_data.ipynb  load_data.py  pyproject.toml
homework/module_02/: 04_postgres_taxi.yaml  homework.md
homework/module_04/: homework.md
kestra/: docker-compose.yaml  pyproject.toml
kestra/flows/: 04_postgres_taxi.yaml
module01/: homework.md  notes.md  readme.md
module01/docker/: Dockerfile  docker-compose.yml  ingest_data.py  pipeline.py  sql_homework.sql  sql_practice.sql  upload-data.ipynb  upload-data_zones.ipynb
module01/terraform/: main.tf  variables.tf
module02/: 02_postgres_taxi.yaml  backup.yml  docker-compose.yml  notes.md
module02/pgadmin_postgres/: docker-compose.yml
pipeline/: Untitled.ipynb  docker-compose.yaml  ingest_data.py  output_11.parquet  pipeline.py  pyproject.toml
terraform/: main.tf
